finish decktop version

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <script src="https://kit.fontawesome.com/3128641a4f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
         rel="stylesheet">
-    <!-- <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
-        rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css//media.css">
     <title>Document</title>
@@ -38,7 +35,6 @@
                             alt=""></a></li>
                 <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/youtube.svg"
                             alt=""></a></li>
-
             </ul>
         </nav>
     </div>
@@ -393,7 +389,7 @@
                     </p>
                     <a href="#" class="btn btn--header-slider js-link">Deeeee nkjn</a>
                 </div>
-                <nav class="header-slider__nav">
+                <nav class="header-slider__nav header-slider__nav--desktop">
                     <ul class="header-slider__nav-list">
                         <li class="header-slider__nav-item header-slider__nav-item--active"><img
                                 class="header-slider__nav-icon" src="./img/icons/doctor.svg" alt=""><span
@@ -420,6 +416,8 @@
 
                     </div>
                 </nav>
+
+
                 <!-- <nav class=" header-slider__mobile-nav">
                             <ul class="header-slider__mobile-nav_list">
                                 <li class="header-slider__mobile-nav-item">
@@ -432,6 +430,61 @@
             </div>
             <!-- </div> -->
         </div>
+        <!-- <nav class="header-slider__nav header-slider__nav--mobile">
+            <ul class="header-slider__nav-list">
+                <li class="header-slider__nav-item header-slider__nav-item--active"><img class="header-slider__nav-icon"
+                        src="./img/icons/doctor.svg" alt=""><span class="header-slider__nav-num">01</span></li>
+                <li class="header-slider__nav-item"><img class="header-slider__nav-icon" src="./img/icons/money.svg"
+                        alt=""><span class="header-slider__nav-num">02</span></li>
+                <li class="header-slider__nav-item"><img class="header-slider__nav-icon" src="./img/icons/computer.svg"
+                        alt=""><span class="header-slider__nav-num">03</span>
+                </li>
+                <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                        src="./img/icons/enginiring.svg" alt=""><span class="header-slider__nav-num">04</span>
+                </li>
+                <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span><img
+                        class="header-slider__nav-icon" src="./img/icons/aviation.svg" alt=""></li>
+                <li class="header-slider__nav-item"><img class="header-slider__nav-icon" src="./img/icons/others.svg"
+                        alt=""><span class="header-slider__nav-num">06</span></li>
+            </ul>
+
+        </nav> -->
+        <div class="header-slider__buttons">
+            <button class="slider-header-btn js-header-slide-prev-mobile"><img src="./img/icons/btn-prev.svg" alt=""
+                    width="35" height="35"></button>
+            <button class="slider-header-btn js-header-slide-next-mobile"><img src="./img/icons/next-btn.svg" alt=""
+                    width="35" height="35"></button>
+
+        </div>
+
+        <!-- <nav class="header-slider__nav">
+            <ul class="header-slider__nav-list">
+                <li class="header-slider__nav-item-mobile header-slider__nav-item--active"><img
+                        class="header-slider__nav-icon" src="./img/icons/doctor.svg" alt=""><span
+                        class="header-slider__nav-num">01</span></li>
+                <li class="header-slider__nav-item-mobile"><img class="header-slider__nav-icon"
+                        src="./img/icons/money.svg" alt=""><span class="header-slider__nav-num">02</span></li>
+                <li class="header-slider__nav-item"><img class="header-slider__nav-icon" src="./img/icons/computer.svg"
+                        alt=""><span class="header-slider__nav-num">03</span>
+                </li>
+                <li class="header-slider__nav-item-mobile"><img class="header-slider__nav-icon"
+                        src="./img/icons/enginiring.svg" alt=""><span class="header-slider__nav-num">04</span>
+                </li>
+                <li class="header-slider__nav-item-mobile"><span class="header-slider__nav-num">05</span><img
+                        class="header-slider__nav-icon" src="./img/icons/aviation.svg" alt=""></li>
+                <li class="header-slider__nav-item-mobile"><img class="header-slider__nav-icon"
+                        src="./img/icons/others.svg" alt=""><span class="header-slider__nav-num">06</span></li>
+            </ul>
+
+            <div class="header-slider__buttons">
+                <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
+                        alt="" width="35" height="35"></button>
+                <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
+                        alt="" width="35" height="35"></button>
+
+            </div> 
+        </nav> -->
+
     </section>
     <div class="assistent-slider-wrap">
         <div class="header-assistent-slider">
@@ -933,7 +986,7 @@
         </div>
     </section>
     <section class="academic-header">
-        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+        <img src="./img//icons/arr-decorate-grey.svg" alt="" class="arrow-decorate">
         <div class="diamond-decorate diamond-decorate--red">
             <div class="diamond-decorate-transparent"></div>
         </div>
@@ -1066,18 +1119,8 @@
             </div>
             <div class="feedback-slider">
                 <div class="feedback-slider__nav">
-
                     <div class="feedback-slider__list">
-
                     </div>
-                    <!-- <ul class="feedback-slider__list">
-                        <li class="feedback-slider__point"></li>
-                        <li class="feedback-slider__point"></li>
-                        <li class="feedback-slider__point feedback-slider__point--active"></li>
-                        <li class="feedback-slider__point"></li>
-                        <li class="feedback-slider__point"></li>
-                    </ul> -->
-
                     <div class="btn-wrap">
                         <button class="slider-nav-btn slider-nav-btn--prev js-feedback-slider__prev-btn">
                             <img src="./img/icons/prev-btn-blue.svg" alt="prev">
@@ -1093,11 +1136,15 @@
                 <div class="feedback-slider__inner">
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
-                            <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <div class="feedback-item__info">
+                            <div class="feedback-item__img">
+                                <img src=" ./img/photo/feedback-img.png" alt="feedback">
+                            </div>
+
+                            <div class=" feedback-item__headers">
                                 <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
                                 <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
                             </div>
+
                             <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
                                 much,
                                 especially Ms. Ekateryna, who has been there for me during the whole application
@@ -1114,73 +1161,8 @@
                         </div>
 
                     </div>
-                    <div class="feedback-item">
-                        <div class="feedback-item__inner">
-                            <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <div class="feedback-item__info">
-                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
-                                <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
-                                    much,
-                                    especially Ms. Ekateryna, who has been there for me during the whole application
-                                    period.
-                                    I
-                                    received the Invitation Letter and the study visa last summer, and I am currently on
-                                    my
-                                    second year studying International Law at Chechen State University. Local people and
-                                    other
-                                    students are nice and friendly, the cuisine is delicious, and there are actually
-                                    many
-                                    places
-                                    to visit in Grozny! Thank you once again!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="feedback-item">
-                        <div class="feedback-item__inner">
-                            <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <div class="feedback-item__info">
-                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
-                                <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
-                                    much,
-                                    especially Ms. Ekateryna, who has been there for me during the whole application
-                                    period.
-                                    I
-                                    received the Invitation Letter and the study visa last summer, and I am currently on
-                                    my
-                                    second year studying International Law at Chechen State University. Local people and
-                                    other
-                                    students are nice and friendly, the cuisine is delicious, and there are actually
-                                    many
-                                    places
-                                    to visit in Grozny! Thank you once again!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="feedback-item">
-                        <div class="feedback-item__inner">
-                            <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <div class="feedback-item__info">
-                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
-                                <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
-                                    much,
-                                    especially Ms. Ekateryna, who has been there for me during the whole application
-                                    period.
-                                    I
-                                    received the Invitation Letter and the study visa last summer, and I am currently on
-                                    my
-                                    second year studying International Law at Chechen State University. Local people and
-                                    other
-                                    students are nice and friendly, the cuisine is delicious, and there are actually
-                                    many
-                                    places
-                                    to visit in Grozny! Thank you once again!</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+
             </div>
     </section>
     <a href="#" class="upBtn">
@@ -1205,7 +1187,7 @@
                 <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
                 <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
                 <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
-                <input type="submit" class="btn footer-form__btn" value="Request Info">
+                <input type="submit" class="footer-form__btn" value="Request Info">
             </form>
             <div class="footer-items">
                 <div class="footer-item">
