--- a/index.html
+++ b/index.html
@@ -377,10 +377,9 @@
                     <h4 class="header-slider__assistant-subtitle">Courses</h4>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
-
-
-                        <h2 class="header-slider__subtitle">Education in Russian
-                            <span class="header-subtitle-decorate">or Ukrainian medium</span> </h2>
+                        <h2 class="header-slider__subtitle">Stady in Ukraine
+                            <p class="header-subtitle-decorate">and Russia</p>
+                        </h2>
                     </div>
                     <p class="header-slider__info js-info">
                         The best thing about studying MBBS in Russia that there is no entrance test for admission in
@@ -1159,11 +1158,68 @@
                                 places
                                 to visit in Grozny! Thank you once again!</p>
                         </div>
+                    </div>
+                    <div class="feedback-item">
+                        <div class="feedback-item__inner">
+                            <div class="feedback-item__img">
+                                <img src=" ./img/photo/feedback-img.png" alt="feedback">
+                            </div>
+
+                            <div class=" feedback-item__headers">
+                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            </div>
+
+                            <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
+                                much,
+                                especially Ms. Ekateryna, who has been there for me during the whole application
+                                period.
+                                I
+                                received the Invitation Letter and the study visa last summer, and I am currently on
+                                my
+                                second year studying International Law at Chechen State University. Local people and
+                                other
+                                students are nice and friendly, the cuisine is delicious, and there are actually
+                                many
+                                places
+                                to visit in Grozny! Thank you once again!</p>
+                        </div>
+                    </div>
+                    <div class="feedback-item">
+                        <div class="feedback-item__inner">
+                            <div class="feedback-item__img">
+                                <img src=" ./img/photo/feedback-img.png" alt="feedback">
+                            </div>
+
+                            <div class=" feedback-item__headers">
+                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            </div>
+
+                            <p class="feedback-item__text">I would like to thank Edugain Overseas
+                                representatives so
+                                much,
+                                especially Ms. Ekateryna, who has been there for me during the whole application
+                                period.
+                                I
+                                received the Invitation Letter and the study visa last summer, and I am
+                                currently on
+                                my
+                                second year studying International Law at Chechen State University. Local people
+                                and
+                                other
+                                students are nice and friendly, the cuisine is delicious, and there are actually
+                                many
+                                places
+                                to visit in Grozny! Thank you once again!</p>
+                        </div>
 
                     </div>
+
                 </div>
 
             </div>
+        </div>
     </section>
     <a href="#" class="upBtn">
         <img src="img/icons/arrow_up.svg" alt="up" class="upArrow">
