--- a/index.html
+++ b/index.html
@@ -318,7 +318,13 @@
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
 
+        <!-- <div class="header-slider__buttons header-slider__buttons--mobile"> -->
+        <button class="slider-header-btn slider-header-btn--mobile-prev js-header-slide-prev-mobile"><img
+                src="./img/icons/header-slider-mobile-prev.svg" alt="" width="53" height="53"></button>
+        <button class="slider-header-btn slider-header-btn--mobile-next js-header-slide-next-mobile"><img
+                src="./img/icons/header-slider-mobile-next.svg" alt="" width="53" height="53"></button>
 
+        <!-- </div> -->
 
         <!-- jquery slider try -->
 
@@ -448,13 +454,7 @@
             </ul>
 
         </nav> -->
-        <div class="header-slider__buttons">
-            <button class="slider-header-btn js-header-slide-prev-mobile"><img src="./img/icons/btn-prev.svg" alt=""
-                    width="35" height="35"></button>
-            <button class="slider-header-btn js-header-slide-next-mobile"><img src="./img/icons/next-btn.svg" alt=""
-                    width="35" height="35"></button>
 
-        </div>
 
         <!-- <nav class="header-slider__nav">
             <ul class="header-slider__nav-list">
