fix menu search

--- a/assistant.html
+++ b/assistant.html
@@ -362,6 +362,19 @@
         </div>
     </section>
 
+    <section class="info">
+        <div class="title-block">
+            <h3 class="title-block__header">
+                About Edugain Overseas
+            </h3>
+            <div class="line">
+                <span class="line-circle"></span>
+            </div>
+
+
+        </div>
+    </section>
+
     <div class="comment-item">
         <!-- <div class="comment-item__wrap"> -->
 
@@ -369,7 +382,7 @@
         <div class="comment-item__title">
 
             <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
-
+            <hr class="comment-item__line">
         </div>
         <div class="comment-item__date">
             Май 25, 2018 в 6:28 пп
