--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                         <li class="header__item"><a href="#" class="header__link">FAQ</a></li>
                     </ul>
                 </nav>
-                <div class="connection-info__item connection-info__item--tablet">
+                <div
+                    class="connection-info__item connection-info__item--tablet connection-info--tablet connection-info--tablet-main">
                     <div class="search">
                         <input type="text" placeholder="search..." class="search__input">
                         <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
@@ -214,16 +215,20 @@
                 </div>
 
             </div>
-            <ul class="social-links-list">
-                <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
-                            class="social-links-icon" src="./img//icons/whatsappblue.svg" alt=""></a></li>
-                <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                            src="./img//icons/instagram-sketched blue.svg" alt=""></a></li>
-                <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                            src="./img//icons/linkedin blue.svg" alt=""></a></li>
-                <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                            src="./img//icons/facebook blue.svg" alt=""></a></li>
-            </ul>
+            <div class="adaptive-menu__social-wrap">
+                <img src="./img/icons/logo footer.svg" alt="">
+                <ul class="social-links-list social-links-list--menu">
+                    <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
+                                class="social-links-icon" src="./img/icons/whatsapp white.svg" alt=""></a></li>
+                    <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
+                                src="./img//icons/instagram-white.svg" alt=""></a></li>
+                    <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
+                                src="./img//icons/linkedin-white.svg" alt=""></a></li>
+                    <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
+                                src="./img//icons/facebook-white.svg" alt=""></a></li>
+                </ul>
+            </div>
+
             <p class="adaptive-menu__info">
                 Edugain in Ukranian рлв мвпмлоиыб мсрмосмыо свы сырвмсорывмс ормыворсм ыовмсы вмосмыо and Russian
             </p>
@@ -262,6 +267,90 @@
                     </details>
                     <details class="navigation-menu__drop-down">
                         <summary>
+                            <div class=" drop-down__header"><span>HOME</span><img src="./img/icons/menu-item-arr.svg"
+                                    alt=">">
+                            </div>
+                            <hr class="drop-down__line">
+                        </summary>
+                        <ul class="drop-down__list">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>About Edugain
+                                        verseas</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Admission Prcer</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Media</span></a></li>
+                            <hr class="drop-down__line-small">
+
+                        </ul>
+                    </details>
+                    <details class="navigation-menu__drop-down">
+                        <summary>
+                            <div class=" drop-down__header"><span>HOME</span><img src="./img/icons/menu-item-arr.svg"
+                                    alt=">">
+                            </div>
+                            <hr class="drop-down__line">
+                        </summary>
+                        <ul class="drop-down__list">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>About Edugain
+                                        verseas</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Admission Prcer</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Media</span></a></li>
+                            <hr class="drop-down__line-small">
+
+                        </ul>
+                    </details>
+                    <details class="navigation-menu__drop-down">
+                        <summary>
+                            <div class=" drop-down__header"><span>HOME</span><img src="./img/icons/menu-item-arr.svg"
+                                    alt=">">
+                            </div>
+                            <hr class="drop-down__line">
+                        </summary>
+                        <ul class="drop-down__list">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>About Edugain
+                                        verseas</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Admission Prcer</span></a>
+
+                            </li>
+                            <hr class="drop-down__line-small">
+                            <li class="drop-down__item"><a class="drop-down__link" href="#"><img
+                                        class="drop-down__link-icon" src="./img/icons/link arr small.svg"
+                                        alt=">"><span>Media</span></a></li>
+                            <hr class="drop-down__line-small">
+
+                        </ul>
+                    </details>
+                    <!-- <details class="navigation-menu__drop-down">
+                        <summary>
                             <div class="drop-down__header"><span>RUSSIA</span><img src="./img/icons/menu-item-arr.svg"
                                     alt=">">
                             </div>
@@ -298,20 +387,20 @@
                             <li><a href=""> Admission Prcer</a></li>
                             <li><a href=""> Media</a></li>
                         </ul>
-                    </details>
+                    </details> -->
                 </div>
             </nav>
-            <div class="connection-info__item connection-info__item--menu">
+            <div class="connection-info__item connection-info__item--search">
                 <div class="search">
                     <input type="text" placeholder="search..." class="search__input">
                     <button class="search__btn search__btn--menu"><img src="./img/icons/icon_search--blue.svg"
                             alt="search"></button>
-                </div>
-            </div>
-            <a href="" class="btn connection-info__btn connection-info__btn--red connection-info__btn--menu">Apply
-                online</a>
 
-        </div>
+                </div>
+                <a href="" class="btn connection-info__btn connection-info__btn--red connection-info__btn--menu">Apply
+                    online</a>
+
+            </div>
     </header>
     <section class="header-slider">
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
